--- a/HotelReservation.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HotelReservation.Web/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
                 <li><hr class="dropdown-divider"></li>
                 <li>
                     <form class="form-inline" asp-controller="Account" asp-action="Logout" method="post">
-                        <button type="submit" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Logout</button>
+                        <button type="submit" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> @Localizer["Logout"]</button>
                     </form>
                 </li>
             </ul>
@@ -26,12 +26,12 @@
     {
         <li class="nav-item">
             <a class="nav-link text-white" asp-controller="Account" asp-action="Register">
-                <i class="fas fa-user-plus"></i> Register
+                <i class="fas fa-user-plus"></i> @Localizer["Register"]
             </a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-white" asp-controller="Account" asp-action="Login">
-                <i class="fas fa-sign-in-alt"></i> Login
+                <i class="fas fa-sign-in-alt"></i> @Localizer["Login"]
             </a>
         </li>
     }
