--- a/HotelReservation.Web/Views/_ViewImports.cshtml
+++ b/HotelReservation.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using HotelReservation.Web.Models
 @using HotelReservation.Core.DTOs
 @using HotelReservation.Core.Enums
+@using Microsoft.Extensions.Localization
+@inject IStringLocalizer<HotelReservation.Web.SharedResource> Localizer
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
